Surround card images with a <div> to prevent content shifting

--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -9,6 +9,10 @@
   cursor: pointer;
 }
 
+.thumbnailWrapper {
+  height: 160px;
+}
+
 .thumbnail {
   width: 100%;
   height: 160px;
